# python-container-dev-prod

./: README.md
dagster_dbt_dev_prod/dbt_only_dev_prod/: .env  README.md  docker-compose-dev.yml  docker-compose-prod.yml
dagster_dbt_dev_prod/dbt_only_dev_prod/dbt-image/: Dockerfile  pyproject.toml
dagster_dbt_dev_prod/dbt_only_dev_prod/dbt-image/dbt-project/: profiles.yml
dagster_dbt_dev_prod/dbt_with_extract_dev_prod/: .env  README.md  docker-compose-dev.yml  docker-compose-prod.yml
dagster_dbt_dev_prod/dbt_with_extract_dev_prod/dbt-image/dbt-project/: profiles.yml
dagster_dbt_dev_prod/dbt_with_extract_dev_prod/dbt-image/dbt-project/dbt_project_changename/: dbt_project.yml
dagster_dbt_dev_prod/dbt_with_extract_dev_prod/python-extract-image/: pyproject.toml
marimo_dev_prod/: .env  README.md  docker-compose-dev.yml  docker-compose-prod.yml
marimo_dev_prod/marimo-image/: Dockerfile  pyproject.toml
marimo_dev_prod/marimo-image/scripts/: main_notebook.py
marimo_dev_prod/marimo-image/scripts/__marimo__/session/: main_notebook.py.json
python_script_dev_prod/: README.md  docker-compose-prod.yml
python_script_dev_prod/many_components/: .env  docker-compose-dev.yml  docker-compose-prod.yml
python_script_dev_prod/many_components/python-image/: Dockerfile
python_script_dev_prod/many_components/python-image/scripts/: main.py
python_script_dev_prod/one_component/: docker-compose-prod.yml
python_script_dev_prod/one_component/python-image/: Dockerfile  pyproject.toml
